
* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[next]]
== Next

icon:plus[] Monitoring: The readiness probe will now also check for plugin status. Failed plugin deployments will let the readiness probe fail.

[[v1.5.3]]
== 1.5.3 (16.07.2020)

icon:check[] Permissions: Various flaws in the admin permission handling have been fixed.

[quote]
____

* The `resetAdminPassword` command line operation will now also re-create the admin user if it can't be found.
* The admin permission is no longer bound to the `admin` role. Instead a dedicated `admin` flag can be set for users in order to grant admin privileges on a per-user basis. Mesh will automatically set the user admin flag for all users which have access to the role with the name `admin`. The permissions of the `admin` role will not be changed. It is advised to remove the admin group and admin role since those are no longer needed to cover admin privileges.
* The admin user flag is also part of the user principal and can be used by plugins to check for admin privileges.
* Admin endpoints will now check for the `admin` user flag and disregard any role that has been assigned to the user.
____

icon:plus[] Elasticsearch: The `branchUuid` property was added to documents in the search index.

icon:check[] Security: A minor security issue has been fixed.

icon:check[] UI: The Gentics Mesh UI has been updated to version link:https://github.com/gentics/mesh-ui/blob/1.1.2/CHANGELOG.md#112---2020-07-16[1.1.2]

[[v1.5.2]]
== 1.5.2 (22.06.2020)

icon:check[] Config: It is now possible to configure the image cache directory path using the `MESH_IMAGE_CACHE_DIRECTORY` environment variable. Fixes link:https://github.com/gentics/mesh/issues/1067[#1067]

icon:check[] Consistency Checks: An empty binary will no longer be considered inconsistent.
